--- a/public/client1.html
+++ b/public/client1.html
@@ -1,1 +1,14 @@
-d
+<!DOCTYPE html>
+<html lang="es">
+<head>
+	<meta charset="UTF-8">
+	<title>Cliente de Streaming</title>
+</head>
+<body>
+	<h1>Cliente de Streaming</h1>
+	<p>
+		Esta página recibe en tiempo real el streaming de la cámara web del usuario que genera la transmisión
+	</p>
+	
+</body>
+</html>
